--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ venv/
 code/tests/ravindu/automation/*.json
 code/tests/ravindu/automation2/*.json
 code/tests/ravindu/autoBackup/*.json
+code/main/*.json
