--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ code/tests/ravindu/automation/*.json
 code/tests/ravindu/automation2/*.json
 code/tests/ravindu/autoBackup/*.json
 code/main/*.json
+code/tests/ravindu/video_webrtc_try/signaling-server/package-lock.json
