--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
 asgiref==3.6.0
 astroid==2.14.2
 asttokens==2.2.1
-asyncio==3.4.3
 attrs==25.3.0
 av==12.3.0
-awscrt==0.23.5
 AWSIoTPythonSDK==1.5.4
-awsiotsdk==1.22.1
 Babel==2.10.3
 beautifulsoup4==4.11.2
 blinker==1.5
-boto3==1.38.27
-botocore==1.38.27
 certifi==2025.4.26
 chardet==5.1.0
 charset-normalizer==3.0.1
@@ -26,6 +21,7 @@ distro==1.8.0
 docutils==0.19
 Flask==2.2.2
 gpiozero==2.0.1
+gyp==0.1
 h11==0.16.0
 html5lib==1.1
 idna==3.3
@@ -34,7 +30,6 @@ isort==5.6.4
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
-jmespath==1.0.1
 jsonpointer==2.3
 jsonschema==4.10.3
 lazy-object-proxy==1.9.0
@@ -43,6 +38,8 @@ libarchive-c==2.9
 libevdev==0.5
 logilab-common==1.9.8
 lxml==4.9.2
+Mako==1.2.4.dev0
+Markdown==3.4.1
 MarkupSafe==2.1.2
 mccabe==0.7.0
 meson==1.5.1
@@ -52,9 +49,7 @@ mypy-extensions==0.4.3
 numpy==1.24.2
 oauthlib==3.2.2
 olefile==0.46
-opencv-python==4.11.0.86
 outcome==1.3.0.post0
-paho-mqtt==2.1.0
 parso==0.8.3
 pexpect==4.8.0
 pgzero==1.2
@@ -66,6 +61,7 @@ Pillow==9.4.0
 platformdirs==2.6.0
 psutil==5.9.4
 ptyprocess==0.7.0
+PyAudio==0.2.13
 pycairo==1.20.1
 pycryptodomex==3.11.0
 pycups==2.0.1
@@ -84,11 +80,11 @@ pyserial==3.5
 pysmbc==1.0.23
 PySocks==1.7.1
 python-apt==2.6.0
-python-dateutil==2.9.0.post0
 python-dotenv==0.21.0
 python-prctl==1.8.1
 pytz==2022.7.1
 pyudev==0.24.0
+PyYAML==6.0
 reportlab==3.6.12
 requests==2.28.1
 requests-oauthlib==1.3.0
@@ -96,9 +92,7 @@ responses==0.18.0
 rfc3987==1.3.8
 roman==3.3
 rpi-lgpio==0.6
-RPi.GPIO==0.7.1
 RTIMULib==7.2.1
-s3transfer==0.13.0
 selenium==4.33.0
 Send2Trash==1.8.1b0
 sense-hat==2.6.0
