--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ code/tests/ravindu/autoBackup/*.json
 code/main/*.json
 code/tests/ravindu/video_webrtc_try/signaling-server/package-lock.json
 code/main/utils/*.json
+code/tests/ravindu/autonav/calibration_images/*.jpg
